--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ theme: jekyll-theme-architect
 title: [SCI Helper]
 description: [Help you find the accessible paper with the DOI.]
 show_downloads: [true]
+github:
+  zip_url: https://github.com/Waynehfut/scihubhelper/releases
